[package]
name = "sback"
version = "0.3.0"
edition = "2021"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
description = "A CLI tool to manage and run your backups."
repository = "https://github.com/mstruebing/sback"
homepage = "https://github.com/mstruebing/sback"
license = "MIT"
categories = ["command-line-utilities", "backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
xdg = "2.4.1"
flate2 = "1.0.24"
tar = "0.4.38"
